// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > EditBundle renders correctly 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading clearfix "
  >
    Create a new grid
  </div>
  <div
    className="panel-body"
  >
    <form
      encType="multipart/form-data"
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="name-input"
        >
          Grid name
        </label>
        <input
          className="form-control"
          id="name-input"
          name="Name"
          onChange={[Function]}
          placeholder="Grid name"
          type="text"
          value={undefined}
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="files-input"
        >
          Grid files
        </label>
        <input
          className="form-control"
          id="files-input"
          multiple={true}
          name="files"
          onChange={[Function]}
          placeholder="Grid files"
          type="file"
          value={undefined}
        />
      </div>
      <input
        className="btn btn-block btn-success"
        disabled={true}
        type="submit"
        value="Create a new grid"
      />
    </form>
  </div>
</div>
`;

exports[`Component > EditBundle renders csv upload correctly 1`] = `
<CreateGrid
  fetch={[Function]}
  finish={[Function]}
  projectId="PROJECT ID"
>
  <Panel>
    <div
      className="panel panel-default"
    >
      <Heading>
        <div
          className="panel-heading clearfix "
        >
          Create a new grid
        </div>
      </Heading>
      <Body>
        <div
          className="panel-body"
        >
          <form
            encType="multipart/form-data"
            method="post"
            onSubmit={[Function]}
          >
            <Text
              label="Grid name"
              name="Name"
              onChange={[Function]}
              placeholder="Grid name"
            >
              <Group
                label="Grid name"
                name="Name"
                onChange={[Function]}
                placeholder="Grid name"
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="name-input"
                  >
                    Grid name
                  </label>
                  <Input
                    label="Grid name"
                    name="Name"
                    onChange={[Function]}
                    placeholder="Grid name"
                    type="text"
                  >
                    <input
                      className="form-control"
                      id="name-input"
                      name="Name"
                      onChange={[Function]}
                      placeholder="Grid name"
                      type="text"
                    />
                  </Input>
                </div>
              </Group>
            </Text>
            <File
              label="Grid files"
              multiple={true}
              name="files"
              onChange={[Function]}
            >
              <Group
                label="Grid files"
                multiple={true}
                name="files"
                onChange={[Function]}
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="files-input"
                  >
                    Grid files
                  </label>
                  <Input
                    label="Grid files"
                    multiple={true}
                    name="files"
                    onChange={[Function]}
                    type="file"
                  >
                    <input
                      className="form-control"
                      id="files-input"
                      multiple={true}
                      name="files"
                      onChange={[Function]}
                      placeholder="Grid files"
                      type="file"
                    />
                  </Input>
                </div>
              </Group>
            </File>
            <span>
              <Text
                label="Latitude field"
                name="latField"
                onChange={[Function]}
                placeholder="Latitude field"
              >
                <Group
                  label="Latitude field"
                  name="latField"
                  onChange={[Function]}
                  placeholder="Latitude field"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      htmlFor="lat-field-input"
                    >
                      Latitude field
                    </label>
                    <Input
                      label="Latitude field"
                      name="latField"
                      onChange={[Function]}
                      placeholder="Latitude field"
                      type="text"
                    >
                      <input
                        className="form-control"
                        id="lat-field-input"
                        name="latField"
                        onChange={[Function]}
                        placeholder="Latitude field"
                        type="text"
                      />
                    </Input>
                  </div>
                </Group>
              </Text>
              <Text
                label="Longitude field"
                name="lonField"
                onChange={[Function]}
                placeholder="Longitude field"
              >
                <Group
                  label="Longitude field"
                  name="lonField"
                  onChange={[Function]}
                  placeholder="Longitude field"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      htmlFor="lon-field-input"
                    >
                      Longitude field
                    </label>
                    <Input
                      label="Longitude field"
                      name="lonField"
                      onChange={[Function]}
                      placeholder="Longitude field"
                      type="text"
                    >
                      <input
                        className="form-control"
                        id="lon-field-input"
                        name="lonField"
                        onChange={[Function]}
                        placeholder="Longitude field"
                        type="text"
                      />
                    </Input>
                  </div>
                </Group>
              </Text>
            </span>
            <input
              className="btn btn-block btn-success"
              disabled={true}
              type="submit"
              value="Create a new grid"
            />
          </form>
        </div>
      </Body>
    </div>
  </Panel>
</CreateGrid>
`;

exports[`Component > EditBundle renders shapefile upload correctly 1`] = `
<CreateGrid
  fetch={[Function]}
  finish={[Function]}
  projectId="PROJECT ID"
>
  <Panel>
    <div
      className="panel panel-default"
    >
      <Heading>
        <div
          className="panel-heading clearfix "
        >
          Create a new grid
        </div>
      </Heading>
      <Body>
        <div
          className="panel-body"
        >
          <form
            encType="multipart/form-data"
            method="post"
            onSubmit={[Function]}
          >
            <Text
              label="Grid name"
              name="Name"
              onChange={[Function]}
              placeholder="Grid name"
            >
              <Group
                label="Grid name"
                name="Name"
                onChange={[Function]}
                placeholder="Grid name"
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="name-input"
                  >
                    Grid name
                  </label>
                  <Input
                    label="Grid name"
                    name="Name"
                    onChange={[Function]}
                    placeholder="Grid name"
                    type="text"
                  >
                    <input
                      className="form-control"
                      id="name-input"
                      name="Name"
                      onChange={[Function]}
                      placeholder="Grid name"
                      type="text"
                    />
                  </Input>
                </div>
              </Group>
            </Text>
            <File
              label="Grid files"
              multiple={true}
              name="files"
              onChange={[Function]}
            >
              <Group
                label="Grid files"
                multiple={true}
                name="files"
                onChange={[Function]}
              >
                <div
                  className="form-group"
                >
                  <label
                    htmlFor="files-input"
                  >
                    Grid files
                  </label>
                  <Input
                    label="Grid files"
                    multiple={true}
                    name="files"
                    onChange={[Function]}
                    type="file"
                  >
                    <input
                      className="form-control"
                      id="files-input"
                      multiple={true}
                      name="files"
                      onChange={[Function]}
                      placeholder="Grid files"
                      type="file"
                    />
                  </Input>
                </div>
              </Group>
            </File>
            <input
              className="btn btn-block btn-success"
              disabled={true}
              type="submit"
              value="Create a new grid"
            />
          </form>
        </div>
      </Body>
    </div>
  </Panel>
</CreateGrid>
`;
